generated/checker-for-evaluation/generated/test-Buffer-Overflow-a97de7bff13b1cc825c1b1344eaed8d6c2d3e695/build_logs/8/build_error_log3.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘bool {anonymous}::EvaluateExprToInt(llvm::APSInt&, const clang::Expr*, clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:39:71: error: cannot convert ‘std::optional<clang::ento::nonloc::ConcreteInt>’ to ‘const clang::ento::nonloc::ConcreteInt*’ in initialization
   39 |     if (const nonloc::ConcreteInt *CI = Val.getAs<nonloc::ConcreteInt>()) {
      |                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                                       |
      |                                                                       std::optional<clang::ento::nonloc::ConcreteInt>
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:202:12: warning: unused variable ‘ExpectedCopyLen’ [-Wunused-variable]
  202 |       long ExpectedCopyLen = ExpectedCopyInt.getExtValue();
      |            ^~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
